--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -16,3 +16,13 @@ h1 {
 	font-weight: 600;
 	line-height: 1.2;
 }
+
+.flex-center {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	min-height: 100vh;
+	text-align: center;
+}
